src/test/deca/syntax/valid/Objet/ListClasses-Empty-Main.deca
// Description:
//      Syntaxically correct program with multiple empty class bodies follwed by main
//
// Result:
//      nothing
//
// History:
//      Created in 17/1/2022

class A {
}

{
}
