src/test/deca/syntax/invalid/Objet/ListClasses-badExtends.deca
// Description:
//      Syntaxically incorrect program
//
// Result:
//      Parsing error on line 16
//
// History:
//      Created in 17/1/2022

class A {
}

class B {
}

class C extends A,B {
}